# test-craft-ai

./: .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  SPEC.md  docker-compose.yaml  import_output.json  import_result.json  package-lock.json  package.json  repro_hocon.js  repro_hocon_2.js  start.py  tsconfig.json  turbo.json
apps/api/: .env.example  Dockerfile  package-lock.json  package.json  vitest.config.ts
apps/cli/: package.json  test-validate-plan.conf  tsconfig.json
apps/web/: angular.json  package.json  tsconfig.json
docker/: Dockerfile.api  Dockerfile.ui
docker/runners/rust/: Cargo.toml  Dockerfile  runner.sh
docker/runners/rust/src/: lib.rs
docs/: AI-AGENT-SPEC.md  API-REFERENCE.md  ARCHITECTURE.md  CLI-REFERENCE.md  DEVELOPMENT.md  FEATURES.md  HOCON-REFERENCE.md  README.md
docs/runbooks/: RUNBOOKS.md
jenkins/: Jenkinsfile  Jenkinsfile.multibranch
jenkins/vars/: testcraft.groovy
k8s/: api.yaml  ingress.yaml  kind-config.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  redis.yaml  secrets.yaml  ui.yaml  yugabyte.yaml
k8s/base/: configmap.yaml  namespace.yaml  pod-template.yaml  (+1 more)
scripts/: build-runners.sh  deploy-k8s.sh  dev-k8s.sh  k8s-deploy-all.sh  k8s-rebuild.sh  k8s-status.sh  restart-dev.sh  test-hocon.sh
tests/: database-context-example.hocon  elle-list-append-serializability.hocon  elle-write-skew-g2.hocon  integration-tests.hocon  k8s-yugabyte-elle-chaos.hocon  regression-suite.hocon  smoke-tests.hocon  validate-scenarios.ts  yugabyte-chaos-consistency-fixed.hocon  yugabyte-chaos-consistency.hocon
(+279 files in other folders)
